Scala Assignments/1.Codingbat/2.Warm up-2/1.StringTimes.txt
--Java

public String stringTimes(String str, int n) {
  if(n==0)
  {
    return "";
  }
  else
  {
    return str+stringTimes(str,n-1);
  }
}


--Scala

scala> def stringTimes(n:Int,str:String):String={
     | var result=""
     | var i=0
     | for (i <- n){
     | result=result+str}
     | return result}
<console>:14: error: value foreach is not a member of Int
       for (i <- n){
                 ^

scala> def stringTimes(n:Int,str:String):String={
     | var result=""
     | var i=0
     | for (i <- 1 to n){
     | result=result+str}
     | return result}
stringTimes: (n: Int, str: String)String

scala> stringTimes("Hello",4)
<console>:13: error: type mismatch;
 found   : String("Hello")
 required: Int
       stringTimes("Hello",4)
                   ^
<console>:13: error: type mismatch;
 found   : Int(4)
 required: String
       stringTimes("Hello",4)
                           ^

scala> stringTimes(4,"Hello")
res1: String = HelloHelloHelloHello
